KIndex koeficient change

--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -129,24 +129,23 @@
 <div class="footer">
     <div class="footer__content">
         <div class="footer__content__col">
-            <a href="/texty/o-serveru">O nás</a>
-            <a href="/texty/vize">Naše vize</a>
-            <a href="/texty/kodex">Náš kodex</a>
-            <a href="/texty/kontakt">Kontakt</a>
-            <a href="/texty/pro-media">Pro média, loga</a>
+            <a href="https://texty.hlidacstatu.cz/o-serveru">O nás</a>
+            <a href="https://texty.hlidacstatu.cz/vize">Naše vize</a>
+            <a href="https://texty.hlidacstatu.cz/kodex">Náš kodex</a>
+            <a href="https://texty.hlidacstatu.cz/kontakt">Kontakt</a>
+            <a href="https://texty.hlidacstatu.cz/pro-media">Pro média, loga</a>
         </div>
         <div class="footer__content__gap"></div>
         <div class="footer__content__col">
-            <a href="/texty/team">Team</a>
-            <a href="https://www.darujme.cz/projekt/1200384">Finanční podpora</a>
+            <a href="https://texty.hlidacstatu.cz/team">Team</a>
+            <a href="https://texty.hlidacstatu.cz/pomohu-spravnemu-fungovani-cr/" style="color:#3c763d;font-weight:bold">Podpořte nás!<i class="fas fa-heart" style="color:red"></i></a>
             <a href="/api">API a Open data pro vývojáře</a>
-            <a href="/texty/provoznipodminky/">Podmínky užívání a ochrana soukromí</a>
-            <a href="/texty/series/tipy/">Tipy, nápověda</a>
+            <a href="https://texty.hlidacstatu.cz/provoznipodminky/">Podmínky užívání a ochrana soukromí</a>
+            <a href="https://texty.hlidacstatu.cz/series/tipy/">Tipy, nápověda</a>
         </div>
         <div class="footer__content__gap"></div>
         <div class="footer__content__col">
-            <a href="https://status.HlidacStatu.cz" target="_blank"><span class="glyphicon glyphicon-dashboard"></span>&nbsp;Status služeb</a>
-            <a href="https://www.hlidacstatu.cz/texty/kontakt/" target="_blank" style="color:orange"><span class="glyphicon glyphicon-alert"></span>&nbsp;Nahlásit chybu</a>
+            <a href="https://texty.hlidacstatu.cz/kontakt/" target="_blank" style="color:orange"><span class="glyphicon glyphicon-alert"></span>&nbsp;Nahlásit chybu</a>
             <span>Sledujte nás</span>
             <div>
                 <a href="https://www.facebook.com/hlidacstatu"><img src="/Content/img/icon-fb.svg" alt="icon facebook"></a>
