--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -25,51 +25,55 @@
 
 <style>
     .barbar {
-        display:block;
-        margin:0px;
-        padding:0px;
-        height:20px;
-        float:left;
+        display: block;
+        margin: 0px;
+        padding: 0px;
+        height: 20px;
+        float: left;
     }
 
-    .barbar.cla {
-        position: absolute;
-        margin-left: 0px;
-    }
-    .barbar.clb {
-        position: absolute;
-        margin-left: 30px;
-    }
-    .barbar.clc {
-        position: absolute;
-        margin-left: 60px;
-    }
-    .barbar.cld {
-        position: absolute;
-        margin-left: 90px;
-    }
-    .barbar.cle {
-        position: absolute;
-        margin-left: 120px;
-    }
-    .barbar.clf {
-        position: absolute;
-        margin-left: 150px;
-    }
+        .barbar.cla {
+            position: absolute;
+            margin-left: 0px;
+        }
 
-    .barbar.red {
-        background-color: red;
-    }
+        .barbar.clb {
+            position: absolute;
+            margin-left: 30px;
+        }
 
-    .barbar.orange {
-        background-color: orange;
-    }
+        .barbar.clc {
+            position: absolute;
+            margin-left: 60px;
+        }
 
-    .barbar.green {
-        background-color: green;
-    }
+        .barbar.cld {
+            position: absolute;
+            margin-left: 90px;
+        }
 
- </style>
+        .barbar.cle {
+            position: absolute;
+            margin-left: 120px;
+        }
+
+        .barbar.clf {
+            position: absolute;
+            margin-left: 150px;
+        }
+
+        .barbar.red {
+            background-color: red;
+        }
+
+        .barbar.orange {
+            background-color: orange;
+        }
+
+        .barbar.green {
+            background-color: green;
+        }
+</style>
 
 <style>
     .kmeter {
@@ -89,7 +93,7 @@
         padding-bottom: 5px;
         height: 100%;
         float: left;
-        margin-right: 6px;
+        margin-right: 1px;
         height: 100%;
     }
 
@@ -181,7 +185,15 @@
     }
 </style>
 
+<div class="row">
+    <label class="control-label new-p--big" for="year">Rok:</label>
 
+    <select class="form-control form-control-new" name="year" id="year" style="width:400px;">
+        <option value="2019" selected="selected">2019</option>
+        <option value="2018">2018</option>
+        <option value="2017">2017</option>
+    </select>
+</div>
 
 
 <br />
@@ -207,20 +219,20 @@
     <div class="kframe dpart">
         <div class="kfill">
             <div class="textover">D</div>
-            <div class="kfill dfill" style="width: 20%"></div>
+            <div class="kfill dfill" style="width: 100%"></div>
         </div>
     </div>
     <div class="kframe epart">
         <div class="kfill">
             <div class="textover">E</div>
-            <div class="kfill efill" style="width: 50%"></div>
+            <div class="kfill efill" style="width: 100%"></div>
         </div>
     </div>
     <div class="kframe fpart">
         <div class="kfill">
             <div class="textover">F</div>
-            <div class="totalnumber">27,19</div>
-            <div class="kfill ffill" style="width: 30%"></div>
+            <div class="totalnumber">20,6</div>
+            <div class="kfill ffill" style="width: 49%"></div>
         </div>
     </div>
 </div>
@@ -233,151 +245,182 @@
                 <td>
                     <b>Rok 2019</b>
                 </td>
-                <td>
-                    <b>%</b>
-                </td>
-                <td>
+                <td style="text-align:right">
                     <b>Váha</b>
                 </td>
+                <td style="text-align:right">
+                    <b>Základní hodnota</b>
+                </td>
+                <td style="text-align:right">
+                    <b>Mezisoučet</b>
+                </td>
                 <td>
-                    <b>Celkové zastoupení</b>
+                    <b>Grafík - poměr zastoupení</b>
                 </td>
             </tr>
             <tr>
                 <td>
                     smlouvy se skrytou cenou
                 </td>
-                <td style="width:100px">
-                    <div>
-                        <div class="barbar green" style="width:14%"></div>
-                        <div style="float:right">14</div>
-                    </div>
-                </td>
                 <td style="text-align:right">
                     10
                 </td>
                 <td style="text-align:right">
-                    140
+                    0.14
+                </td>
+                <td style="text-align:right">
+                    1.40
+                </td>
+                <td style="width:100px">
+                    <div class="barbar orange" style="width:7%"></div>
                 </td>
             </tr>
             <tr>
                 <td>
                     smlouvy s nově založenými firmami
                 </td>
-                <td style="width:100px">
-                    <div class="barbar orange" style="width:17%"></div>
-                    <div style="float:right">17</div>
-                </td>
                 <td style="text-align:right">
                     2
                 </td>
                 <td style="text-align:right">
-                    34
+                    0.17
+                </td>
+                <td style="text-align:right">
+                    0.34
+                </td>
+                <td style="width:100px">
+                    <div class="barbar red" style="width:2%"></div>
                 </td>
             </tr>
             <tr>
                 <td>
                     smlouvy se zásadním nedostatkem
                 </td>
-                <td>
-                    <div class="barbar red" style="width:73%"></div>
-                    <div style="float:right">73</div>
-                </td>
                 <td style="text-align:right">
                     10
                 </td>
                 <td style="text-align:right">
-                    730
+                    0.73
+                </td>
+                <td style="text-align:right">
+                    7.30
+                </td>
+                <td style="width:100px">
+                    <div class="barbar orange" style="width:35%"></div>
                 </td>
             </tr>
             <tr>
                 <td>
                     smlouvy s firmami s vazbou na politiky
                 </td>
-                <td>
-                    <div class="barbar red" style="width:38%"></div>
-                    <div style="float:right">38</div>
-                </td>
                 <td style="text-align:right">
                     2
                 </td>
                 <td style="text-align:right">
-                    76
+                    0.38
+                </td>
+                <td style="text-align:right">
+                    0.76
+                </td>
+                <td style="width:100px">
+                    <div class="barbar orange" style="width:4%"></div>
                 </td>
             </tr>
             <tr>
                 <td>
                     smlouvy s cenou u limitu VZ
                 </td>
-                <td>
-                    <div class="barbar green" style="width:1%"></div>
-                    <div style="float:right">1</div>
-                </td>
                 <td style="text-align:right">
                     10
                 </td>
                 <td style="text-align:right">
-                    10
+                    0.01
+                </td>
+                <td style="text-align:right">
+                    0.10
+                </td>
+                <td style="width:100px">
+                    <div class="barbar green" style="width:0%"></div>
                 </td>
             </tr>
             <tr>
                 <td>
                     smlouvy uzavřené o víkendu
                 </td>
-                <td>
-                    <div class="barbar green" style="width:5%"></div>
-                    <div style="float:right">5</div>
-                </td>
                 <td style="text-align:right">
                     2
                 </td>
                 <td style="text-align:right">
-                    10
+                    0.05
+                </td>
+                <td style="text-align:right">
+                    0.10
+                </td>
+                <td style="width:100px">
+                    <div class="barbar green" style="width:0%"></div>
                 </td>
             </tr>
             <tr>
                 <td>
                     Koncentrace dodavatelů
                 </td>
-                <td>
-                    <div class="barbar red" style="width:18%"></div>
-                    <div style="float:right">18</div>
-                </td>
                 <td style="text-align:right">
                     20
                 </td>
                 <td style="text-align:right">
-                    360
+                    0.18
+                </td>
+                <td style="text-align:right">
+                    3.60
+                </td>
+                <td style="width:100px">
+                    <div class="barbar green" style="width:17%"></div>
                 </td>
             </tr>
             <tr>
                 <td>
                     Koncentrace dodavatelů bez uvedené ceny
                 </td>
-                <td>
-                    <div class="barbar green" style="width:0%"></div>
-                    <div style="float:right">0</div>
-                </td>
                 <td style="text-align:right">
                     20
                 </td>
                 <td style="text-align:right">
-                    0
+                    0.26
+                </td>
+                <td style="text-align:right">
+                    5.20
+                </td>
+                <td style="width:100px">
+                    <div class="barbar red" style="width:25%"></div>
                 </td>
             </tr>
             <tr>
                 <td>
                     Koncentrace dodavatelů - ceny u limitu VZ
                 </td>
-                <td>
-                    <div class="barbar orange" style="width:18%"></div>
-                    <div style="float:right">18</div>
-                </td>
                 <td style="text-align:right">
                     10
                 </td>
                 <td style="text-align:right">
-                    180
+                    0.18
+                </td>
+                <td style="text-align:right">
+                    1.80
+                </td>
+                <td style="width:100px">
+                    <div class="barbar orange" style="width:9%"></div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Suma</b>
+                </td>
+                <td style="text-align:right">
+                </td>
+                <td style="text-align:right">
+                </td>
+                <td style="text-align:right">
+                    <b>20.6</b>
                 </td>
             </tr>
         </tbody>
